[project]
name = "peppermint"
version = "0.1.0"
description = ""
authors = [
    {name = "Grant Saggars",email = "mumbo1002@gmail.com"},
    {name = "Vivek Jain",email = "jainx1234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "argparse==1.4.0",
    "PyVISA-sim==0.6.0",
    "textual==1.0.0",
    "textual[syntax]==1.0.0", 
    "pyvisa (>=1.15.0,<2.0.0)",
    "bokeh==3.6.2",
    "numpy==2.2.1 ",
    "pyvisa-py (>=0.8.0,<0.9.0)",
    "qcodes (>=0.52.0,<0.53.0)",
    "textual-dev (>=1.7.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
